--- a/index.html
+++ b/index.html
@@ -1,41 +1,19 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Inicio - Ghost Dog</title>
+        <title>Ghost Dog</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="website icon" type="png" href="img/ico/icon.png">
     </head>
     <body>
-        <header class="titulo">
-            <h1>Ghost Dog</h1>
-            <nav class="centrado">
-                <button class="active">Inicio</button>
-                <button onclick="window.location.href='..';">Sobre nosotros</button>
-                <button onclick="window.location.href='..';">Noticias</button>
-                <button onclick="window.location.href='..';">Opiniones</button>
-                <button onclick="window.location.href='..';">Servicios</button>
-                <button onclick="window.location.href='..';">Contacto</button>
-            </nav>
-        </header>
-        <main>
-            <section id="main-container" class="bordered">
-                <h1>¡Descubre Ghost Dog!</h1>
-                <hr>
-                <p>Que consiste en un cementerio ecológico para mascotas, una necesidad no cubierta en la sociedad,
-                    que prestará un servicio de cuidado paliativo, criogenización y entierro ecológico a las personas
-                    dueñas de mascotas que deseen solicitarlo.</p>
-            </section>
-            <section id="main-container" class="bordered">
-                <h1>Página web bajo una licencia de Creative Commons:</h1>
-                <hr>
-                <p>Que consiste en un cementerio ecológico para mascotas, una necesidad no cubierta en la sociedad,
-                    que prestará un servicio de cuidado paliativo, criogenización y entierro ecológico a las personas
-                    dueñas de mascotas que deseen solicitarlo.</p>
-            </section>
-        </main>
-        <footer>
+        <h1>PÁGINA WEB EN CONSTRUCCIÓN</h1>
 
-        </footer>
+        <h4>Esta página web se encuentra bajo mantenimiento. Pronto se añadirán las funciones principales y su publicación.</h4>
+        <h6>El equipo de Ghost Dog.</h6>
+
+        <a href="https://ghostdogcorp.webnode.es/">WEBNODE</a><br>
+        <a href="https://bit.ly/afi1ghostdog-es">PÁGINA ALTERNATIVA</a>
     </body>
+
 </html>
