--- a/contact/index.html
+++ b/contact/index.html
@@ -24,20 +24,8 @@
                 <section id="main-container" class="bordered">
                     <h1>¡Ponte en contacto con nosotros!</h1>
                     <hr>
-                    <p>* = campo requerido</p>
-                </section>
-                <section id="main-container" class="bordered">
-                    <p><label>Nombre: *</label><input type="text" name="nombre" required size="32"></p>
-                    <p><label>Email: </label><input type="email" name="email" placeholder="@" size="35"></p>
-                    <p><label>Mensaje: *</label></p>
-                    <p>
-                        <textarea></textarea>
-                    </p>
-                    <p>
-                        Al enviar el formulario, aceptas los términos y condiciones de Ghost Dog.
-                    <p>
-                        <center><button onclick='submit'>Enviar</button></center>
-                    </p>
+                    <p>ERROR: Debido a problemas de seguridad con el formulario, hemos desactivado el formulario de manera temporal.
+                    Estamos trabajando en estos momentos para solucionarlo, lamentamos las molestias.</p>
                 </section>
             </main>
         </form>
@@ -47,4 +35,5 @@
             </div>
         </footer>
     </body>
+
 </html>
