--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button onclick="window.location.href='news/index.html';">Noticias</button>
                 <button onclick="window.location.href='reviews/index.html';">Opiniones</button>
                 <button onclick="window.location.href='services/index.html';">Servicios</button>
-                <button onclick="window.location.href='https://ghostdogcorp.webnode.es/contacto/';">Contacto</button>
+                <button onclick="window.location.href='contact/index.html';">Contacto</button>
             </nav>
         </header>
         <main>
@@ -47,3 +47,4 @@
     </body>
 
 </html>
+
