--- a/contact/index.html
+++ b/contact/index.html
@@ -24,8 +24,9 @@
                 <section id="main-container" class="bordered">
                     <h1>¡Ponte en contacto con nosotros!</h1>
                     <hr>
-                    <p>ERROR: Debido a problemas de seguridad con el formulario, hemos desactivado el formulario de manera temporal.
-                    Estamos trabajando en estos momentos para solucionarlo, lamentamos las molestias.</p>
+                    <p><center>
+                    <button onclick="window.location.href='https://ghostdogcorp.webnode.es/contacto/';">Pulsa aquí para contactar con nosotros</button>
+                    </center></p>
                 </section>
             </main>
         </form>
@@ -35,5 +36,4 @@
             </div>
         </footer>
     </body>
-
 </html>
